--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.516.0",
     "mapbox-gl": "^3.12.0",
     "motion": "^12.18.1",
