--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mapbox-gl": "^3.12.0",
     "motion": "^12.18.1",
     "next": "^15.3.3",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.5.2",
